--- a/qml.qrc
+++ b/qml.qrc
@@ -5,5 +5,6 @@
         <file>Testing.qml</file>
         <file>EntityList.qml</file>
         <file>PhysicalView.qml</file>
+        <file>LogicalView.qml</file>
     </qresource>
 </RCC>
