Refs #10860: Added qos table
Signed-off-by: RaulSanchez <raul@eprosima.com>

--- a/qml.qrc
+++ b/qml.qrc
@@ -6,5 +6,6 @@
         <file>EntityList.qml</file>
         <file>PhysicalView.qml</file>
         <file>LogicalView.qml</file>
+        <file>QosView.qml</file>
     </qresource>
 </RCC>
