--- a/qml.qrc
+++ b/qml.qrc
@@ -7,5 +7,6 @@
         <file>PhysicalView.qml</file>
         <file>LogicalView.qml</file>
         <file>QosView.qml</file>
+        <file>PopUpInitMonitorWindow.qml</file>
     </qresource>
 </RCC>
