Init monitor and Internal Signals (#5)
* Add Controller

Signed-off-by: jparisu <javierparis@eprosima.com>

* Add Dialog for init_monitor

Signed-off-by: jparisu <javierparis@eprosima.com>

* Init Monitor button and clickable entities

Signed-off-by: jparisu <javierparis@eprosima.com>

* Refs #10936: internal signals

Signed-off-by: jparisu <javierparis@eprosima.com>

* Refs #10936: rebase over Backend main

Signed-off-by: jparisu <javierparis@eprosima.com>

* Refs #10936: rebase over Tree model update

Signed-off-by: jparisu <javierparis@eprosima.com>

--- a/qml.qrc
+++ b/qml.qrc
@@ -7,5 +7,7 @@
         <file>PhysicalView.qml</file>
         <file>LogicalView.qml</file>
         <file>QosView.qml</file>
+        <file>PopUpInitMonitorWindow.qml</file>
+        <file>SummaryView.qml</file>
     </qresource>
 </RCC>
