--- a/qml.qrc
+++ b/qml.qrc
@@ -1,13 +1,13 @@
 <RCC>
     <qresource prefix="/">
-        <file>main.qml</file>
-        <file>Panels.qml</file>
-        <file>Testing.qml</file>
-        <file>EntityList.qml</file>
-        <file>PhysicalView.qml</file>
-        <file>LogicalView.qml</file>
-        <file>QosView.qml</file>
-        <file>PopUpInitMonitorWindow.qml</file>
-        <file>SummaryView.qml</file>
+        <file>qml/main.qml</file>
+        <file>qml/Panels.qml</file>
+        <file>qml/Testing.qml</file>
+        <file>qml/EntityList.qml</file>
+        <file>qml/PhysicalView.qml</file>
+        <file>qml/LogicalView.qml</file>
+        <file>qml/QosView.qml</file>
+        <file>qml/PopUpInitMonitorWindow.qml</file>
+        <file>qml/SummaryView.qml</file>
     </qresource>
 </RCC>
