Retrive data from dialog to create new series in charts
Signed-off-by: RaulSanchez <raul@eprosima.com>

--- a/qml.qrc
+++ b/qml.qrc
@@ -14,5 +14,6 @@
         <file>qml/StatisticsChartView.qml</file>
         <file>qml/StatisticsChartBox.qml</file>
         <file>qml/DataKindDialog.qml</file>
+        <file>qml/MonitorToolBar.qml</file>
     </qresource>
 </RCC>
