Refs #11121: Added eprosima icon
Signed-off-by: RaulSanchez <raul@eprosima.com>

--- a/qml.qrc
+++ b/qml.qrc
@@ -17,4 +17,7 @@
         <file>qml/IssueView.qml</file>
         <file>qml/ChartsLayout.qml</file>
     </qresource>
+    <qresource prefix="/resources/images">
+        <file>eprosima_logo.ico</file>
+    </qresource>
 </RCC>
