Refs #11140: Issue view
Signed-off-by: jparisu <javierparis@eprosima.com>

--- a/qml.qrc
+++ b/qml.qrc
@@ -15,5 +15,6 @@
         <file>qml/StatisticsChartBox.qml</file>
         <file>qml/DataKindDialog.qml</file>
         <file>qml/MonitorToolBar.qml</file>
+        <file>qml/IssueView.qml</file>
     </qresource>
 </RCC>
