Added custom legend
Signed-off-by: RaulSanchez <raul@eprosima.com>

--- a/qml.qrc
+++ b/qml.qrc
@@ -1,23 +1,24 @@
 <RCC>
     <qresource prefix="/">
-        <file>qml/main.qml</file>
-        <file>qml/Panels.qml</file>
-        <file>qml/EntityList.qml</file>
-        <file>qml/PhysicalView.qml</file>
-        <file>qml/LogicalView.qml</file>
-        <file>qml/QosView.qml</file>
-        <file>qml/InitMonitorDialog.qml</file>
-        <file>qml/SummaryView.qml</file>
-        <file>qml/DisplayStatisticsDialog.qml</file>
         <file>qml/AdditionalEntityId.qml</file>
-        <file>qml/StatisticsChartView.qml</file>
-        <file>qml/StatisticsChartBox.qml</file>
-        <file>qml/DataKindDialog.qml</file>
-        <file>qml/MonitorToolBar.qml</file>
-        <file>qml/IssueView.qml</file>
         <file>qml/ChartsLayout.qml</file>
-        <file>qml/RightPanel.qml</file>
+        <file>qml/CustomLegend.qml</file>
+        <file>qml/DataKindDialog.qml</file>
+        <file>qml/DisplayStatisticsDialog.qml</file>
+        <file>qml/EntityList.qml</file>
+        <file>qml/InitMonitorDialog.qml</file>
+        <file>qml/IssueView.qml</file>
         <file>qml/LeftPanel.qml</file>
+        <file>qml/LogicalView.qml</file>
+        <file>qml/main.qml</file>
+        <file>qml/MonitorToolBar.qml</file>
+        <file>qml/Panels.qml</file>
+        <file>qml/PhysicalView.qml</file>
+        <file>qml/QosView.qml</file>
+        <file>qml/RightPanel.qml</file>
+        <file>qml/StatisticsChartBox.qml</file>
+        <file>qml/StatisticsChartView.qml</file>
+        <file>qml/SummaryView.qml</file>
     </qresource>
     <qresource prefix="/resources/images">
         <file alias="eprosima_logo.ico">resources/images/eprosima_logo.ico</file>
