Added differ click mouse area and interaction with icons
Signed-off-by: RaulSanchez <raul@eprosima.com>

--- a/qml.qrc
+++ b/qml.qrc
@@ -23,6 +23,7 @@
         <file>qml/StatisticsChartBox.qml</file>
         <file>qml/StatisticsChartView.qml</file>
         <file>qml/SummaryView.qml</file>
+        <file>qml/DifferClickMouseArea.qml</file>
         <file>imports/Theme/Theme.qml</file>
         <file>imports/Theme/qmldir</file>
         <file>controls/MenuBar.qml</file>
