Refs #11458: Last entity clicked functionality
Signed-off-by: RaulSanchez <raul@eprosima.com>

--- a/qml.qrc
+++ b/qml.qrc
@@ -37,6 +37,7 @@
         <file>controls/ToolButton.qml</file>
         <file>controls/ComboBox.qml</file>
         <file>controls/ItemDelegate.qml</file>
+        <file>controls/Button.qml</file>
     </qresource>
     <qresource prefix="/resources/images">
         <file alias="eprosima_logo.ico">resources/images/eprosima_logo.ico</file>
