--- a/qml.qrc
+++ b/qml.qrc
@@ -2,7 +2,7 @@
     <qresource prefix="/">
         <file>qtquickcontrols2.conf</file>
         <file>qml/AboutDialog.qml</file>
-        <file>qml/MainApplicationView.qml</file>
+        <file>qml/MainStartView.qml</file>
         <file>qml/AdaptiveComboBox.qml</file>
         <file>qml/ChartsLayout.qml</file>
         <file>qml/CustomLegend.qml</file>
@@ -31,6 +31,7 @@
         <file>imports/Theme/qmldir</file>
         <file>controls/MenuBar.qml</file>
         <file>controls/MenuBarItem.qml</file>
+        <file>controls/TabBar.qml</file>
         <file>controls/TabButton.qml</file>
         <file>controls/ScrollBar.qml</file>
         <file>controls/SplitView.qml</file>
