--- a/qml.qrc
+++ b/qml.qrc
@@ -39,12 +39,31 @@
         <file>qml/Panels.qml</file>
         <file>qml/PhysicalView.qml</file>
         <file>qml/QosView.qml</file>
-        <file>qml/RightPanel.qml</file>
+        <file>qml/IssuesPanel.qml</file>
         <file>qml/StatisticsChartBox.qml</file>
         <file>qml/StatisticsChartView.qml</file>
         <file>qml/StatusView.qml</file>
         <file>qml/SummaryView.qml</file>
+        <file>qml/DifferClickMouseArea.qml</file>
+        <file>qml/InfoToolTip.qml</file>
+        <file>qml/DynamicDataKindDialog.qml</file>
+        <file>qml/MonitoringPanel.qml</file>
+        <file>qml/IconsVBar.qml</file>
+        <file>qml/StatusPanel.qml</file>
         <file>qtquickcontrols2.conf</file>
+        <file>imports/Theme/Theme.qml</file>
+        <file>imports/Theme/qmldir</file>
+        <file>controls/MenuBar.qml</file>
+        <file>controls/MenuBarItem.qml</file>
+        <file>controls/TabBar.qml</file>
+        <file>controls/TabButton.qml</file>
+        <file>controls/ScrollBar.qml</file>
+        <file>controls/SplitView.qml</file>
+        <file>controls/ToolBar.qml</file>
+        <file>controls/ToolButton.qml</file>
+        <file>controls/ComboBox.qml</file>
+        <file>controls/ItemDelegate.qml</file>
+        <file>controls/Button.qml</file>
     </qresource>
     <qresource prefix="/resources/images">
         <file alias="cross.svg">resources/images/cross.svg</file>
@@ -66,5 +85,8 @@
         <file alias="topic.svg">resources/images/topic.svg</file>
         <file alias="user.svg">resources/images/user.svg</file>
         <file alias="three_dots_menu.svg">resources/images/three_dots_menu.svg</file>
+        <file alias="explorer.svg">resources/images/explorer.svg</file>
+        <file alias="status.svg">resources/images/status.svg</file>
+        <file alias="issues.svg">resources/images/issues.svg</file>
     </qresource>
 </RCC>
