Added dashboard layout icons
Signed-off-by: RaulSanchez <raul@eprosima.com>

--- a/qml.qrc
+++ b/qml.qrc
@@ -77,6 +77,18 @@
         <file alias="explorer_eProsimaLightBlue.svg">resources/images/icons/explorer/explorer_eProsimaLightBlue.svg</file>
         <file alias="explorer_grey.svg">resources/images/icons/explorer/explorer_grey.svg</file>
         <file alias="explorer_white.svg">resources/images/icons/explorer/explorer_white.svg</file>
+        <file alias="grid1_black.svg">resources/images/icons/grid1/grid1_black.svg</file>
+        <file alias="grid1_eProsimaLightBlue.svg">resources/images/icons/grid1/grid1_eProsimaLightBlue.svg</file>
+        <file alias="grid1_grey.svg">resources/images/icons/grid1/grid1_grey.svg</file>
+        <file alias="grid1_white.svg">resources/images/icons/grid1/grid1_white.svg</file>
+        <file alias="grid2_black.svg">resources/images/icons/grid2/grid2_black.svg</file>
+        <file alias="grid2_eProsimaLightBlue.svg">resources/images/icons/grid2/grid2_eProsimaLightBlue.svg</file>
+        <file alias="grid2_grey.svg">resources/images/icons/grid2/grid2_grey.svg</file>
+        <file alias="grid2_white.svg">resources/images/icons/grid2/grid2_white.svg</file>
+        <file alias="grid3_black.svg">resources/images/icons/grid3/grid3_black.svg</file>
+        <file alias="grid3_eProsimaLightBlue.svg">resources/images/icons/grid3/grid3_eProsimaLightBlue.svg</file>
+        <file alias="grid3_grey.svg">resources/images/icons/grid3/grid3_grey.svg</file>
+        <file alias="grid3_white.svg">resources/images/icons/grid3/grid3_white.svg</file>
         <file alias="host_black.svg">resources/images/icons/host/host_black.svg</file>
         <file alias="host_eProsimaLightBlue.svg">resources/images/icons/host/host_eProsimaLightBlue.svg</file>
         <file alias="host_grey.svg">resources/images/icons/host/host_grey.svg</file>
