refactor StatisticsChartView to a single class
Signed-off-by: jparisu <javierparis@eprosima.com>

--- a/qml.qrc
+++ b/qml.qrc
@@ -49,6 +49,7 @@
         <file>qml/HistoricStatisticsChartView.qml</file>
         <file>qml/StatusPanel.qml</file>
         <file>qml/StatusView.qml</file>
+        <file>qml/StatisticsChartView.qml</file>
         <file>qml/SummaryView.qml</file>
         <file>qtquickcontrols2.conf</file>
     </qresource>
