--- a/qml.qrc
+++ b/qml.qrc
@@ -58,6 +58,14 @@
         <file alias="fastdds-monitor-logo.png">resources/images/fastdds-monitor-logo.png</file>
     </qresource>
     <qresource prefix="/resources/images/icons">
+        <file alias="clearissues_black.svg">resources/images/icons/clearissues/clearissues_black.svg</file>
+        <file alias="clearissues_eProsimaLightBlue.svg">resources/images/icons/clearissues/clearissues_eProsimaLightBlue.svg</file>
+        <file alias="clearissues_grey.svg">resources/images/icons/clearissues/clearissues_grey.svg</file>
+        <file alias="clearissues_white.svg">resources/images/icons/clearissues/clearissues_white.svg</file>
+        <file alias="clearlog_black.svg">resources/images/icons/clearlog/clearlog_black.svg</file>
+        <file alias="clearlog_eProsimaLightBlue.svg">resources/images/icons/clearlog/clearlog_eProsimaLightBlue.svg</file>
+        <file alias="clearlog_grey.svg">resources/images/icons/clearlog/clearlog_grey.svg</file>
+        <file alias="clearlog_white.svg">resources/images/icons/clearlog/clearlog_white.svg</file>
         <file alias="cross_black.svg">resources/images/icons/cross/cross_black.svg</file>
         <file alias="cross_eProsimaLightBlue.svg">resources/images/icons/cross/cross_eProsimaLightBlue.svg</file>
         <file alias="cross_grey.svg">resources/images/icons/cross/cross_grey.svg</file>
@@ -74,6 +82,10 @@
         <file alias="domain_eProsimaLightBlue.svg">resources/images/icons/domain/domain_eProsimaLightBlue.svg</file>
         <file alias="domain_grey.svg">resources/images/icons/domain/domain_grey.svg</file>
         <file alias="domain_white.svg">resources/images/icons/domain/domain_white.svg</file>
+        <file alias="dynamicchart_black.svg">resources/images/icons/dynamicchart/dynamicchart_black.svg</file>
+        <file alias="dynamicchart_eProsimaLightBlue.svg">resources/images/icons/dynamicchart/dynamicchart_eProsimaLightBlue.svg</file>
+        <file alias="dynamicchart_grey.svg">resources/images/icons/dynamicchart/dynamicchart_grey.svg</file>
+        <file alias="dynamicchart_white.svg">resources/images/icons/dynamicchart/dynamicchart_white.svg</file>
         <file alias="explorer_black.svg">resources/images/icons/explorer/explorer_black.svg</file>
         <file alias="explorer_eProsimaLightBlue.svg">resources/images/icons/explorer/explorer_eProsimaLightBlue.svg</file>
         <file alias="explorer_grey.svg">resources/images/icons/explorer/explorer_grey.svg</file>
@@ -90,6 +102,10 @@
         <file alias="grid3_eProsimaLightBlue.svg">resources/images/icons/grid3/grid3_eProsimaLightBlue.svg</file>
         <file alias="grid3_grey.svg">resources/images/icons/grid3/grid3_grey.svg</file>
         <file alias="grid3_white.svg">resources/images/icons/grid3/grid3_white.svg</file>
+        <file alias="historicalchart_black.svg">resources/images/icons/historicalchart/historicalchart_black.svg</file>
+        <file alias="historicalchart_eProsimaLightBlue.svg">resources/images/icons/historicalchart/historicalchart_eProsimaLightBlue.svg</file>
+        <file alias="historicalchart_grey.svg">resources/images/icons/historicalchart/historicalchart_grey.svg</file>
+        <file alias="historicalchart_white.svg">resources/images/icons/historicalchart/historicalchart_white.svg</file>
         <file alias="host_black.svg">resources/images/icons/host/host_black.svg</file>
         <file alias="host_eProsimaLightBlue.svg">resources/images/icons/host/host_eProsimaLightBlue.svg</file>
         <file alias="host_grey.svg">resources/images/icons/host/host_grey.svg</file>
@@ -128,6 +144,10 @@
         <file alias="process_eProsimaLightBlue.svg">resources/images/icons/process/process_eProsimaLightBlue.svg</file>
         <file alias="process_grey.svg">resources/images/icons/process/process_grey.svg</file>
         <file alias="process_white.svg">resources/images/icons/process/process_white.svg</file>
+        <file alias="refresh_black.svg">resources/images/icons/refresh/refresh_black.svg</file>
+        <file alias="refresh_eProsimaLightBlue.svg">resources/images/icons/refresh/refresh_eProsimaLightBlue.svg</file>
+        <file alias="refresh_grey.svg">resources/images/icons/refresh/refresh_grey.svg</file>
+        <file alias="refresh_white.svg">resources/images/icons/refresh/refresh_white.svg</file>
         <file alias="status_black.svg">resources/images/icons/status/status_black.svg</file>
         <file alias="status_eProsimaLightBlue.svg">resources/images/icons/status/status_eProsimaLightBlue.svg</file>
         <file alias="status_grey.svg">resources/images/icons/status/status_grey.svg</file>
