--- a/qml.qrc
+++ b/qml.qrc
@@ -27,6 +27,7 @@
         <file>qml/EntitiesMenu.qml</file>
         <file>qml/EntityList.qml</file>
         <file>qml/ErrorDialog.qml</file>
+        <file>qml/ExportCSVFileDialog.qml</file>
         <file>qml/IconsVBar.qml</file>
         <file>qml/IconSVG.qml</file>
         <file>qml/InfoToolTip.qml</file>
