Export chart to CSV [12025] (#93)
* Export charts to csv

Signed-off-by: jparisu <javierparis@eprosima.com>

* refactor StatisticsChartView to a single class

Signed-off-by: jparisu <javierparis@eprosima.com>

* refactor multiple csv format

Signed-off-by: jparisu <javierparis@eprosima.com>

* working, all_csv for implement in qml

Signed-off-by: jparisu <javierparis@eprosima.com>

* modify export csv time unit

Signed-off-by: jparisu <javierparis@eprosima.com>

* centralized csv write

Signed-off-by: jparisu <javierparis@eprosima.com>

* Working Export all

Signed-off-by: jparisu <javierparis@eprosima.com>

* clean code and add comments

Signed-off-by: jparisu <javierparis@eprosima.com>

* apply suggestions and minor fixes

Signed-off-by: jparisu <javierparis@eprosima.com>

* uncrustify

Signed-off-by: jparisu <javierparis@eprosima.com>

* apply suggestions

Signed-off-by: jparisu <javierparis@eprosima.com>

--- a/qml.qrc
+++ b/qml.qrc
@@ -27,6 +27,7 @@
         <file>qml/EntitiesMenu.qml</file>
         <file>qml/EntityList.qml</file>
         <file>qml/ErrorDialog.qml</file>
+        <file>qml/ExportCSVFileDialog.qml</file>
         <file>qml/IconsVBar.qml</file>
         <file>qml/IconSVG.qml</file>
         <file>qml/InfoToolTip.qml</file>
@@ -49,6 +50,7 @@
         <file>qml/HistoricStatisticsChartView.qml</file>
         <file>qml/StatusPanel.qml</file>
         <file>qml/StatusView.qml</file>
+        <file>qml/StatisticsChartView.qml</file>
         <file>qml/SummaryView.qml</file>
         <file>qtquickcontrols2.conf</file>
     </qresource>
