--- a/qml.qrc
+++ b/qml.qrc
@@ -18,6 +18,7 @@
         <file>qml/ChangeAliasDialog.qml</file>
         <file>qml/ChartsLayout.qml</file>
         <file>qml/CustomLegend.qml</file>
+        <file>qml/DoubleSpinBox.qml</file>
         <file>qml/HistoricDataKindDialog.qml</file>
         <file>qml/DifferClickMouseArea.qml</file>
         <file>qml/HistoricDisplayStatisticsDialog.qml</file>
@@ -46,6 +47,7 @@
         <file>qml/Panels.qml</file>
         <file>qml/PhysicalView.qml</file>
         <file>qml/QosView.qml</file>
+        <file>qml/SetAxesDialog.qml</file>
         <file>qml/StatisticsChartBox.qml</file>
         <file>qml/HistoricStatisticsChartView.qml</file>
         <file>qml/StatusPanel.qml</file>
@@ -112,6 +114,7 @@
         <file alias="host_eProsimaLightBlue.svg">resources/images/icons/host/host_eProsimaLightBlue.svg</file>
         <file alias="host_grey.svg">resources/images/icons/host/host_grey.svg</file>
         <file alias="host_white.svg">resources/images/icons/host/host_white.svg</file>
+        <file alias="info_black.svg">resources/images/icons/info/info_black.svg</file>
         <file alias="issues_black.svg">resources/images/icons/issues/issues_black.svg</file>
         <file alias="issues_eProsimaLightBlue.svg">resources/images/icons/issues/issues_eProsimaLightBlue.svg</file>
         <file alias="issues_grey.svg">resources/images/icons/issues/issues_grey.svg</file>
@@ -150,6 +153,8 @@
         <file alias="refresh_eProsimaLightBlue.svg">resources/images/icons/refresh/refresh_eProsimaLightBlue.svg</file>
         <file alias="refresh_grey.svg">resources/images/icons/refresh/refresh_grey.svg</file>
         <file alias="refresh_white.svg">resources/images/icons/refresh/refresh_white.svg</file>
+        <file alias="reset_zoom_black.svg">resources/images/icons/reset_zoom/reset_zoom_black.svg</file>
+        <file alias="resize_black.svg">resources/images/icons/resize/resize_black.svg</file>
         <file alias="status_black.svg">resources/images/icons/status/status_black.svg</file>
         <file alias="status_eProsimaLightBlue.svg">resources/images/icons/status/status_eProsimaLightBlue.svg</file>
         <file alias="status_grey.svg">resources/images/icons/status/status_grey.svg</file>
