Refs #12022: Style for scrollbar and CustomLegend
Signed-off-by: jparisu <javierparis@eprosima.com>

--- a/qml.qrc
+++ b/qml.qrc
@@ -18,6 +18,7 @@
         <file>qml/ChangeAliasDialog.qml</file>
         <file>qml/ChartsLayout.qml</file>
         <file>qml/CustomLegend.qml</file>
+        <file>qml/CustomScrollBar.qml</file>
         <file>qml/DoubleSpinBox.qml</file>
         <file>qml/HistoricDataKindDialog.qml</file>
         <file>qml/DifferClickMouseArea.qml</file>
